--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,10 +1,14 @@
 <h1>Articles</h1>
 
+Our blog has <%= Article.public_count %> articles and counting!
+
 <ul>
   <% @articles.each do |article| %>
-    <li>
-      <%= article.title %> - <%= link_to "see article", article %>
-    </li>
+    <% unless article.archived? %>
+      <li>
+        <%= article.title %> - <%= link_to "see article", article %>
+      </li>
+    <% end %>
   <% end %>
 </ul>
 
